<resources>
    <string name="app_name">Android Tutorials</string>

    <string name="signup">Create Your Student Account</string>
    <string name="signin">Log Into Your Account</string>
    <string name="signup_in_desc">Your student account is your portal to different Android related topics and more!</string>
    <string name="signup_hint_1">Name</string>
    <string name="signup_hint_3">Username</string>
    <string name="signup_hint_4">Password</string>
    <string name="signup_hint_5">Confirm Password</string>
    <string name="signup_button_1">SIGN UP</string>
    <string name="signin_button_1">SIGN IN</string>
    <string name="signin_button_2">Forgot your password?</string>
    <string name="signin_button_3">Skip Registration</string>

</resources>
