<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.shreygupta.tutorial.SignUpFragment">

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/colorText"
        android:textSize="30sp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_in_desc"/>

    <EditText
        android:inputType="text"
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_hint_1"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/reg_usr_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_hint_3"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_hint_4"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/reg_con_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_hint_5"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/signup"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_1"
        android:textColor="@color/white"
        android:background="@color/colorButton"/>

</LinearLayout>
