<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.shreygupta.tutorial.SignInFragment">

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/colorText"
        android:textSize="30sp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_in_desc"/>

    <EditText
        android:id="@+id/usr_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_hint_3"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_hint_4"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/signin"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_button_1"
        android:textColor="@color/white"
        android:background="@color/colorButton"/>

    <Button
        android:id="@+id/forgot"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/signin_button_2"
        android:textColor="@color/colorButton"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/skip"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/signin_button_3"
        android:textColor="@color/colorButton"
        android:layout_gravity="center"/>

</LinearLayout>